--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9250,6 +9250,7 @@
     <Content Include="Areas\Reportes\Views\RRHHReportes\_PivotGridROL_019.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\ExportPartial.cshtml" />
     <Content Include="Areas\Caja\Views\Caja\_GridViewPartial_caja.cshtml" />
+    <Content Include="Areas\Contabilidad\Views\AnioFiscal\_CmbCuenta_Anio.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
