--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -989,6 +989,7 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_006_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_006_sin_comision_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Data.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_001_detalle_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_diario_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_003_cancelaciones_Data.cs" />
@@ -1641,6 +1642,9 @@
       <DependentUpon>Model_cuentas_por_cobrar.tt</DependentUpon>
     </Compile>
     <Compile Include="VWCXP_001.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VWCXP_001_detalle.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="VWCXP_002.cs">
