--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9478,6 +9478,9 @@
     <EmbeddedResource Include="Reportes\CuentasPorCobrar\CXC_006_sin_comision_Rpt.resx">
       <DependentUpon>CXC_006_sin_comision_Rpt.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_001_detalle_Rpt.resx">
+      <DependentUpon>CXP_001_detalle_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_001_Rpt.resx">
       <DependentUpon>CXP_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
