--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -413,8 +413,8 @@
     <Compile Include="Areas\RRHH\Controllers\RdepController.cs" />
     <Compile Include="Areas\RRHH\Controllers\RubroController.cs" />
     <Compile Include="Areas\RRHH\Controllers\RubrosCalculadosController.cs" />
-    <Compile Include="Areas\RRHH\Controllers\TipoGatosPersonalesController.cs" />
-    <Compile Include="Areas\RRHH\Controllers\TipoGatosPersonalesAnualController.cs" />
+    <Compile Include="Areas\RRHH\Controllers\TipoGastosPersonalesController.cs" />
+    <Compile Include="Areas\RRHH\Controllers\TipoGastosPersonalesAnualController.cs" />
     <Compile Include="Areas\RRHH\Controllers\TipoPrestamoController.cs" />
     <Compile Include="Areas\RRHH\Controllers\TurnoController.cs" />
     <Compile Include="Areas\RRHH\Controllers\VacacionesController.cs" />
@@ -9261,16 +9261,16 @@
     <Content Include="Areas\Contabilidad\Views\AnioFiscal\_CmbCuenta_Anio.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Deudas\_CmbFlujo_Deudas.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\_CmbBanco_Proveedor.cshtml" />
-    <Content Include="Areas\RRHH\Views\TipoGatosPersonales\Nuevo.cshtml" />
-    <Content Include="Areas\RRHH\Views\TipoGatosPersonales\Modificar.cshtml" />
-    <Content Include="Areas\RRHH\Views\TipoGatosPersonales\Index.cshtml" />
-    <Content Include="Areas\RRHH\Views\TipoGatosPersonales\Anular.cshtml" />
-    <Content Include="Areas\RRHH\Views\TipoGatosPersonales\_GridViewPartial_tipo_gastos_personales.cshtml" />
-    <Content Include="Areas\RRHH\Views\TipoGatosPersonalesAnual\_GridViewPartial_tipo_gastos_personal_anual.cshtml" />
-    <Content Include="Areas\RRHH\Views\TipoGatosPersonalesAnual\Anular.cshtml" />
-    <Content Include="Areas\RRHH\Views\TipoGatosPersonalesAnual\Index.cshtml" />
-    <Content Include="Areas\RRHH\Views\TipoGatosPersonalesAnual\Modificar.cshtml" />
-    <Content Include="Areas\RRHH\Views\TipoGatosPersonalesAnual\Nuevo.cshtml" />
+    <Content Include="Areas\RRHH\Views\TipoGastosPersonales\Nuevo.cshtml" />
+    <Content Include="Areas\RRHH\Views\TipoGastosPersonales\Modificar.cshtml" />
+    <Content Include="Areas\RRHH\Views\TipoGastosPersonales\Index.cshtml" />
+    <Content Include="Areas\RRHH\Views\TipoGastosPersonales\Anular.cshtml" />
+    <Content Include="Areas\RRHH\Views\TipoGastosPersonales\_GridViewPartial_tipo_gastos_personales.cshtml" />
+    <Content Include="Areas\RRHH\Views\TipoGastosPersonalesAnual\_GridViewPartial_tipo_gastos_personal_anual.cshtml" />
+    <Content Include="Areas\RRHH\Views\TipoGastosPersonalesAnual\Anular.cshtml" />
+    <Content Include="Areas\RRHH\Views\TipoGastosPersonalesAnual\Index.cshtml" />
+    <Content Include="Areas\RRHH\Views\TipoGastosPersonalesAnual\Modificar.cshtml" />
+    <Content Include="Areas\RRHH\Views\TipoGastosPersonalesAnual\Nuevo.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
