--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -185,6 +185,7 @@
     <Compile Include="General\tbl_TransaccionesAutorizadas_info.cs" />
     <Compile Include="General\tbl_usuario_ftp_Info.cs" />
     <Compile Include="General\tb_banco_Info.cs" />
+    <Compile Include="General\tb_banco_procesos_bancarios_x_empresa_Info.cs" />
     <Compile Include="General\tb_bodega_Info.cs" />
     <Compile Include="General\tb_CatalogoTipo_Info.cs" />
     <Compile Include="General\tb_Catalogo_Info.cs" />
