--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -212,6 +212,7 @@
     <Compile Include="General\tb_sis_reporte_x_seg_usuario_Info.cs" />
     <Compile Include="General\tb_sucursal_Info.cs" />
     <Compile Include="General\tb_TarjetaCredito_Info.cs" />
+    <Compile Include="General\tb_TarjetaCredito_x_cp_proveedor_Info.cs" />
     <Compile Include="General\tb_transportista_Info.cs" />
     <Compile Include="General\tb_visor_video_Info.cs" />
     <Compile Include="Helps\cl_enumeradores.cs" />
